--- a/Sheet-To-Do/Sheet-To-Do.Tests/Sheet-To-Do.Tests.csproj
+++ b/Sheet-To-Do/Sheet-To-Do.Tests/Sheet-To-Do.Tests.csproj
@@ -32,6 +32,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Chronic, Version=0.3.2.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Chronic.0.3.2\lib\net40\Chronic.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework" />
     <Reference Include="System" />
@@ -56,6 +59,9 @@
       <Project>{D3E68BE0-AA0A-42D4-8B1A-4BFA34CBC4F4}</Project>
       <Name>Sheet-To-Do</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
