--- a/Sheet-To-Do/Sheet-To-Do-API/Sheet-To-Do-API.csproj
+++ b/Sheet-To-Do/Sheet-To-Do-API/Sheet-To-Do-API.csproj
@@ -101,6 +101,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\WebApiConfig.cs" />
+    <Compile Include="Controllers\TaskCategoriesController.cs" />
     <Compile Include="Controllers\TasksController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
