--- a/Sheet-To-Do/Sheet-To-Do-API/Sheet-To-Do-API.csproj
+++ b/Sheet-To-Do/Sheet-To-Do-API/Sheet-To-Do-API.csproj
@@ -106,6 +106,14 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201709141206437_AddTables.cs" />
+    <Compile Include="Migrations\201709141206437_AddTables.Designer.cs">
+      <DependentUpon>201709141206437_AddTables.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201709141235113_AddIsArchivedToTask.cs" />
+    <Compile Include="Migrations\201709141235113_AddIsArchivedToTask.Designer.cs">
+      <DependentUpon>201709141235113_AddIsArchivedToTask.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\User.cs" />
     <Compile Include="Models\SheetToDoContext.cs" />
@@ -124,6 +132,14 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201709141206437_AddTables.resx">
+      <DependentUpon>201709141206437_AddTables.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201709141235113_AddIsArchivedToTask.resx">
+      <DependentUpon>201709141235113_AddIsArchivedToTask.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
