--- a/Sheet-To-Do/Sheet-To-Do-API/Web.Debug.config
+++ b/Sheet-To-Do/Sheet-To-Do-API/Web.Debug.config
@@ -14,6 +14,10 @@
         xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
     </connectionStrings>
   -->
+  <!--<connectionStrings>
+    <add name="Sheet-To-Do" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=Sheet-To-Do;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=True;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+         providerName="System.Data.SqlClient" xdt:Transform="Replace" xdt:Locator="Match(name)" />
+  </connectionStrings>-->
   <system.web>
     <!--
       In the example below, the "Replace" transform will replace the entire 
