--- a/Sheet-To-Do/Sheet-To-Do-API/Web.Release.config
+++ b/Sheet-To-Do/Sheet-To-Do-API/Web.Release.config
@@ -13,7 +13,13 @@
         connectionString="Data Source=ReleaseSQLServer;Initial Catalog=MyReleaseDB;Integrated Security=True" 
         xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
     </connectionStrings>
-  -->
+   -->
+  
+    <!--<connectionStrings>
+      <add name="Sheet-To-Do" connectionString="Server=serveradress;Initial Catalog=Sheet-To-Do;Persist Security Info=False;User ID=username;Password=password;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+         providerName="System.Data.SqlClient" xdt:Transform="Replace" xdt:Locator="Match(name)" />
+    </connectionStrings>-->
+  
   <system.web>
     <compilation xdt:Transform="RemoveAttributes(debug)" />
     <!--
